Bug 447002 - Zoom: The (cool) new overview mode is not magnified
Summary: Zoom: The (cool) new overview mode is not magnified
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 5.23.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: accessibility
: 451549 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-14 23:33 UTC by Christian H
Modified: 2022-05-25 19:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian H 2021-12-14 23:33:32 UTC
SUMMARY
***
When i zoom in with Meta+= and invoke the new overview mode, nothing magnified. when i close the overview everything is zoomed again as expected. 
You can Zoom out again by pressing Meta+-
***


STEPS TO REPRODUCE
1. Zoom in Meta+= (several times to see the issue more easy)
2. Invoke the new overview mode

OBSERVED RESULT
Nothing is magnified, it looks like the overview mode is "painted" ontop of the zoom window.

EXPECTED RESULT
everything in the overview mode should magnified
Comment 1 Nate Graham 2021-12-15 17:38:42 UTC
Can confirm.
Comment 2 Christian H 2021-12-15 17:57:07 UTC
I created an review video on youtube about the zoom.
https://youtu.be/GfLbDYR7PYE

so you can see the different kind off issues more easy
Comment 3 Nate Graham 2022-03-25 18:30:48 UTC
*** Bug 451549 has been marked as a duplicate of this bug. ***
Comment 4 Rafael Lima 2022-03-25 18:49:26 UTC
As pointed out in Bug 451549, I think that when the overview is activated the Zoom effect can be stopped to show the entire desktop, and then resumed when exiting the overview effect.

The main problem is that when the Zoom effect is activated and the Overview is enabled, the mouse position is read incorrectly. Moving the mouse and clicking in any object of the overview will cause something else to be clicked.
Comment 5 Christian H 2022-05-05 20:14:15 UTC
(In reply to Rafael Lima from comment #4)
> As pointed out in Bug 451549, I think that when the overview is activated
> the Zoom effect can be stopped to show the entire desktop, and then resumed
> when exiting the overview effect.
> 
> The main problem is that when the Zoom effect is activated and the Overview
> is enabled, the mouse position is read incorrectly. Moving the mouse and
> clicking in any object of the overview will cause something else to be
> clicked.

Howdy,
well deactivate accessibility technology is never a way to solve things. we need to make them work somehow. if we just stop the zoom, we deny people to use its computer in those cases. This should never be an option. 

better we should fix existing issues. any other operating system never need to stop its accessibility technology's. this kind of quality should be the way to go. if the screen gets zoomed, the mouse needs position needs to be calculated relative as well in this case.
Comment 6 Bug Janitor Service 2022-05-21 14:04:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2451
Comment 7 Vlad Zahorodnii 2022-05-24 13:11:46 UTC
Git commit 544760469dd4fd7550fc7121250e694a485d453f by Vlad Zahorodnii.
Committed on 24/05/2022 at 13:11.
Pushed by vladz into branch 'Plasma/5.25'.

effects/zoom: Render scene in an offscreen texture

This fixes integration of the zoom effect with the blur effect and qtquick
effects such as overview or window view.

The main con of the proposed solution is that offscreen rendering can be
a bit overkill. But on the other hand, it's the most robust way to
ensure that fullscreen effects integrate correctly with the zoom effect.
For example, without it, the quick scene effect would need to figure out
what screen views to paint for the given screen. There are also more
finicky cases, e.g. the screen transform effect.
Related: bug 447670, bug 453467
Tested-by: Merge Service <https://invent.kde.org/plasma/kwin/-/merge_requests/2451>
Part-of: <https://invent.kde.org/plasma/kwin/-/merge_requests/2451>


(cherry picked from commit 221f114d8045f22eca722a4ce385367f4c3f03fc)

M  +100  -24   src/effects/zoom/zoom.cpp
M  +13   -0    src/effects/zoom/zoom.h

https://invent.kde.org/plasma/kwin/commit/544760469dd4fd7550fc7121250e694a485d453f