src/effects/zoom/zoom.h
@@ -24,7 +24,9 @@ namespace KWin
 class ZoomAccessibilityIntegration;
 #endif
 
+class GLFramebuffer;
 class GLTexture;
+class GLVertexBuffer;
 
 class ZoomEffect
     : public Effect
@@ -94,6 +96,7 @@ private Q_SLOTS:
                           Qt::MouseButtons buttons, Qt::MouseButtons oldbuttons,
                           Qt::KeyboardModifiers modifiers, Qt::KeyboardModifiers oldmodifiers);
     void slotWindowDamaged();
+    void slotScreenRemoved(EffectScreen *screen);
 
 private:
     void showCursor();
@@ -101,7 +104,16 @@ private:
     void moveZoom(int x, int y);
 
 private:
+    struct OffscreenData
+    {
+        QScopedPointer<GLTexture> texture;
+        QScopedPointer<GLFramebuffer> framebuffer;
+        QScopedPointer<GLVertexBuffer> vbo;
+        QRect viewport;
+    };
+
     GLTexture *ensureCursorTexture();
+    OffscreenData *ensureOffscreenData(EffectScreen *screen);
     void markCursorTextureDirty();
 
 #if HAVE_ACCESSIBILITY
@@ -138,6 +150,7 @@ private:
     int xMove, yMove;
     double moveFactor;
     std::chrono::milliseconds lastPresentTime;
+    QHash<EffectScreen *, OffscreenData *> m_offscreenData;
 };
 
 } // namespace
